--- a/QKSMS/src/main/AndroidManifest.xml
+++ b/QKSMS/src/main/AndroidManifest.xml
@@ -477,11 +477,11 @@
                 android:value="1" />
         </service>
         <service android:name="com.android.mms.transaction.TransactionService" />
-        <service android:name=".service.NotificationService" />
         <service android:name=".service.MarkReadService" />
         <service android:name=".service.MarkSeenService" />
         <service android:name=".service.DeleteUnreadMessageService" />
         <service android:name=".service.CopyUnreadMessageTextService" />
+        <service android:name=".service.InsertMessageService" />
         <service
             android:name=".ui.widget.WidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
