--- a/QKSMS/src/main/AndroidManifest.xml
+++ b/QKSMS/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="com.moez.QKSMS"
+<manifest package="com.moez.QKSMS"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -329,6 +328,12 @@
             android:taskAffinity=""
             android:theme="@style/AppThemeLightDialog"
             android:windowSoftInputMode="adjustResize" />
+
+        <activity
+            android:name=".ui.popup.QKReplyActivity2"
+            android:excludeFromRecents="true"
+            android:taskAffinity=""
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
 
         <activity android:name=".ui.mms.SlideshowActivity" />
 
